# IsaacLabExtendedTasks

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docker/: .env  .env.base  .env.extasks  Dockerfile.base  Dockerfile.extasks  container.py  docker-compose.yaml  entrypoint.sh  x11.yaml
docker/utils/: __init__.py  container_interface.py  state_file.py
exts/isaaclab_exassets/: setup.py
exts/isaaclab_exassets/config/: extension.toml
exts/isaaclab_exassets/docs/: README.md
exts/isaaclab_exassets/isaaclab_exassets/: __init__.py  franka.py  kinova.py  kuka.py  ufactory.py  universal_robots.py
exts/isaaclab_exassets/isaaclab_exassets/utils/: add_texture.py  convert_fusion360_mesh.py  load_robocasa_scene.py  pivot_usd_fusion360.sh  pivot_usd_industreal.py  pivot_usd_siemens.py  rename_fusion360_mesh.sh
exts/isaaclab_extasks/: setup.py
exts/isaaclab_extasks/config/: extension.toml
exts/isaaclab_extasks/docs/: README.md
exts/isaaclab_extasks/isaaclab_extasks/: __init__.py
exts/isaaclab_extasks/isaaclab_extasks/block_world/sort/: sort_env_cfg.py
exts/isaaclab_extasks/isaaclab_extasks/block_world/stack/: stack_env_cfg.py
exts/isaaclab_extasks/isaaclab_extasks/block_world/stack/mdp/: observations.py
exts/isaaclab_extasks/isaaclab_extasks/factory/fmb_single_assembly/: __init__.py
exts/isaaclab_extasks/isaaclab_extasks/factory/industreal_gear_assembly/: industreal_gear_assembly_env_cfg.py
exts/isaaclab_extasks/isaaclab_extasks/factory/siemens_gearbox_assembly/: siemens_gearbox_assembly_env_cfg.py
exts/isaaclab_extasks/isaaclab_extasks/kitchen/coffee_make/: coffee_make_env_cfg.py
exts/isaaclab_extasks/isaaclab_extasks/kitchen/coffee_make/mdp/: observations.py
exts/isaaclab_extasks/isaaclab_extasks/living_room/ycb_arrange/: ycb_arrange_env_cfg.py
exts/isaaclab_extasks/isaaclab_extasks/living_room/ycb_arrange/mdp/: events.py
exts/isaaclab_scenesynth/: setup.py
exts/isaaclab_scenesynth/config/: extension.toml
exts/isaaclab_scenesynth/isaaclab_scenesynth/: __init__.py  llm_manager.py  scene_constructor.py
exts/isaaclab_scenesynth/isaaclab_scenesynth/prompts/: asset_instances_prompt.txt  asset_types_prompt.txt  scene_cfg_prompt.txt
exts/omni.isaac.extended_assets/: setup.py
exts/omni.isaac.extended_assets/config/: extension.toml
exts/omni.isaac.extended_assets/data/: .gitkeep
exts/omni.isaac.extended_assets/docs/: README.md
exts/omni.isaac.extended_assets/omni/isaac/extended_assets/: __init__.py  franka.py  kinova.py  kuka.py  ufactory.py  universal_robots.py
exts/omni.isaac.extended_assets/omni/isaac/extended_assets/utils/: add_texture.py  add_texture.sh  convert_fixture_mjcf.py  convert_fixture_mjcf.sh  convert_fusion360_mesh.py  convert_fusion360_mesh.sh  convert_objaverse_fixture_mjcf.py  convert_objaverse_fixture_mjcf.sh  convert_objaverse_object_mjcf.py  convert_objaverse_object_mjcf.sh  convert_partnet_urdf.py  convert_partnet_urdf.sh  convert_siemens_mesh.py  convert_siemens_mesh.sh  fix_fixture_model.sh  fix_objaverse_fixture_model.py  fix_objaverse_fixture_model.sh  fix_objaverse_object_model.sh  load_robocasa_scene.py  load_robocasa_scene.sh  (+14 more)
exts/omni.isaac.extended_tasks/: setup.py
exts/omni.isaac.extended_tasks/config/: extension.toml
exts/omni.isaac.extended_tasks/docs/: README.md
exts/omni.isaac.extended_tasks/omni/isaac/extended_tasks/: __init__.py
scripts/: construct_scene.py  create_scene.py
scripts/configs/: scene_cfg.yaml
source/isaaclab_exassets/: setup.py
source/isaaclab_exassets/isaaclab_exassets/: kinova.py  universal_robots.py
source/isaaclab_exassets/isaaclab_exassets/utils/: convert_fusion360_mesh.sh  convert_objaverse_object_mjcf.py  convert_siemens_mesh.py  env_config.json  fix_objaverse_object_model.py  load_robocasa_scene.py  pivot_usd_fusion360_instanceable.py  pivot_usd_siemens.sh  recreate_fixture_usd.sh  sample.py
source/isaaclab_extasks/: setup.py
source/isaaclab_extasks/isaaclab_extasks/block_world/sort/: sort_env_cfg.py
source/isaaclab_extasks/isaaclab_extasks/block_world/stack/: stack_env_cfg.py
source/isaaclab_extasks/isaaclab_extasks/factory/: __init__.py
source/isaaclab_extasks/isaaclab_extasks/factory/fusion360_joint_assembly/: __init__.py  fusion360_joint_assembly_env_cfg.py
source/isaaclab_extasks/isaaclab_extasks/factory/industreal_gear_assembly/: __init__.py
source/isaaclab_extasks/isaaclab_extasks/factory/siemens_gearbox_assembly/: __init__.py
source/isaaclab_extasks/isaaclab_extasks/kitchen/bowl_stack/: bowl_stack_env_cfg.py
(+217 files in other folders)
